# Homework-Rust

homework1/: Cargo.toml  user_info.txt
homework1/assistance_module_7/: Cargo.toml
homework1/assistance_module_7/src/: main.rs
homework1/bank_account_assignment/src/: bank_account.rs  main.rs
homework1/project_fetch_data/: Cargo.toml  bitcoin_price.txt  ethereum_price.txt  sp500_price.txt
homework1/project_fetch_data/src/: README.md  main.rs
homework1/src/: attendance1.rs  attendance2.rs  hw1_assgn_1.rs  hw1_assgn_2.rs  hw1_assgn_3.rs  hw2_struct_and_file_operations.rs  user_info.txt
